--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     position: sticky;
     top: 0px !important;
-    padding: 20px;
+    padding: 1.25vw;
     background-color: #f1f9ff44;
     -webkit-backdrop-filter: blur(50px);
     z-index: 3;
